ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: routing
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
